--- a/shishi-jingguo-yu-gongkaixin-shijianxian/samuel-belbachir-yuedu-mingan-waijiao-youjian-2025-04-21/index.html
+++ b/shishi-jingguo-yu-gongkaixin-shijianxian/samuel-belbachir-yuedu-mingan-waijiao-youjian-2025-04-21/index.html
@@ -414,7 +414,7 @@ a:active {
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a><br></p>
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a><br></p>
 
 
 
