--- a/shishi-jingguo-yu-gongkaixin-shijianxian/beijing-zhi-ming-wei-xian-pierre-mirochnikoff-gong-kai-xin-2025-04-19/index.html
+++ b/shishi-jingguo-yu-gongkaixin-shijianxian/beijing-zhi-ming-wei-xian-pierre-mirochnikoff-gong-kai-xin-2025-04-19/index.html
@@ -356,7 +356,7 @@ a:active {
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a><br>
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a><br>
 
 
  
@@ -479,7 +479,7 @@ Yves Strickler,
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a>, 
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a>, 
 
  
  
@@ -542,7 +542,7 @@ Yves Strickler,
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a>, 
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a>, 
 
  
  
