--- a/index.html
+++ b/index.html
@@ -460,55 +460,7 @@ a:active {
   您也可以通过以下地址给我发送电子邮件： <a href="mailto:vincent@ecthrwatch.org">vincent@ecthrwatch.org</a>
 </p>
 
-<!-- <div style="text-align: center; font-size: 1.6em; font-weight: bold; margin-top: 1.5em; margin-bottom: 1em;">
-  两分钟执行摘要
-</div>
-<p>🇨🇳 <strong>简体中文版本</strong><br>
-<strong>说明</strong>：请注意，<strong>中文</strong>并不是我的母语，因此我使用了翻译软件来完成本版本。如需更准确、原始的表达，请参考英文或法文版本。</p>
-<p><strong>罪行概述</strong><br>
-麦当劳在全球范围内举办促销活动，虚假宣传为“公平的抽奖游戏”。但事实上，该公司多次歪曲中奖概率，甚至直接伪造中奖数据。这不仅是误导性的市场营销，更是一种精心策划的严重欺诈行为。</p>
-<p>这些类似黑手党的手段构成了大规模的消费者欺诈和跨国洗钱行为。此外，它们也属于《联合国打击跨国有组织犯罪公约》（巴勒莫公约）的适用范围，尤其是<strong>第5条</strong>，该条明确规定要追究参与有组织犯罪集团和跨境实施严重犯罪的责任。</p>
-<p><strong>犯罪的规模</strong><br>
-三十多年来，麦当劳在数十个国家欺骗了数十亿消费者。其经济影响包括：剥夺了消费者在抽奖未被操纵的前提下赢得奖品的机会、操纵市场，以及获取不正当的竞争优势。整体涉案金额可能超过<strong>一万亿美元</strong>。数以万计的加盟商虽然在法律上是独立实体，却在执行这些欺诈操作中发挥了关键作用。尽管许多人可能会声称对此一无所知，但他们的行为往往体现出刑事层面的重大过失。如果法律得以严格执行，麦当劳及其加盟商应被宣布破产，并依法追究刑责。</p>
-<p><strong>法国的沉默与美国情报机构的介入</strong><br>
-在法国，司法文件被多次伪造。麦当劳似乎获得了来自内部的保护，这种保护涉及高级官员、检察官和法官，以及未能履行宪法监督职责的议员。这种保护甚至可能延伸至部长、总理，乃至——如果属实，将构成<strong>一场严重的宪政危机</strong>——现任总统埃马纽埃尔·马克龙。</p>
-<p>我目前居住在中国。曾有一些我此前就认识的人与我接触，他们曾提出雇佣我，却未透露真实身份。直到他们承认麦当劳犯罪的严重性后，才表明自己是<strong>美国情报人员</strong>。在身份曝光后，他们再次提出让我为他们工作的邀请。</p>
-<p><strong>和平共处，上主鉴察</strong><br>
-我深爱中国与美国，但我更深爱我的妻子与岳父母。我的岳父是中国共产党退休干部。如果我接受美国军事情报部门的雇佣，将把我的家庭置于严重危险之中。我如今长期面临来自中国、法国乃至美国当局的报复威胁。
-我所能选择的唯一道路，必须出于<em><strong>良知</strong></em>，遵循我的<em>信仰</em>，听命于上帝而非各国政府，忠于真理与正义，并始终秉持“和平共处”的理想——这是我在上帝面前的道德责任。</p>
-<div style="text-align: center; font-style: italic;">
-“惟愿公平如大水滚滚，使公义如江河滔滔。”<br>
-阿摩司书 5:24 <!-- 和合本 -->
-</div>
-<p>即使法庭沉默，制度崩塌，权贵滥用权力，神圣的正义也从不沉睡。<br>
-它继续奔流。坚定不移。洁净人心。势不可挡。</p>
-<p>一句广为流传的中国谚语表达了这种不可逆转的力量：</p>
-<div style="text-align: center;">「<span style="font-weight: bold;">长江黄河不会倒流</span>」<br><span style="font-style: italic;">“The Yangtze River and the Yellow River will never flow backward.”</span></div>
-<p>它提醒我们，有些力量是无法逆转的，正如创造主的旨意坚定不移、势不可挡。<br>
-神圣的正义从不迟疑。它穿透黑暗，洁净腐败，并且<strong>始终</strong>得胜。</p>
-<p>正如长江与黄河始终奔流到终点，<br>
-我也将坚定地走这条窄路，奔向唯一真正的胜利：<br>
-那胜利恢复正义，带来和平，并成就天意。</p>
-<!-- 陆圣乔 • <a href="/guang-zhi-shu/">光之树</a> • <a href="/guang-zhi-shu/shen-zhan-shi/">神战士</a> -->
-<!-- Spacer div for consistent vertical spacing -->
-<!-- <div style="height: 1.5em;"></div> -->
-
-
-<img
-  src="/images/TreeOfLight_Justice_EagleDove_Final_vlc002.jpg"
-  alt="Tree of Light"
-  style="display:inline-block; height:auto; width:256px; max-width:100%;"
-
-/>
-
-
-<!-- Spacer div for consistent vertical spacing -->
-<!-- <div style="height: 1.5em;"></div> -->
-<p>
-  <a href="https://www.linkedin.com/in/x-v-france">点击这里关注我的 LinkedIn 主页</a><br/>
-  您也可以通过以下地址给我发送电子邮件： <a href="mailto:vincent@ecthrwatch.org">vincent@ecthrwatch.org</a>
-</p>
- -->
+<!-- < executive-summary id="front-page-2-minutes" > -->
 
 </div>
 
